# scarlet-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
assets/: index-8ndR8Whi.css  index-BDDejqAh.js  index-BJOS1lSx.js  index-BR-WAZX0.css  index-CG89K3GA.js  index-CfnXKtoU.js  index-Cnz7Guwj.js  index-DSXRvOCA.js  index-DTuy_Ppc.js  index-DWD_0spt.css  index-Wuw3UwMz.js
deploy/: bu-courses.service.example
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/courses/: AddButton.tsx  CourseModal.tsx  CourseRow.tsx  CourseTable.tsx  RatingBadge.tsx  ScheduleBadge.tsx  SectionSubRow.tsx
frontend/src/components/filters/: DayFilter.tsx  HubChips.tsx  SearchBar.tsx  SortDropdown.tsx  StatusDropdown.tsx  SubjectDropdown.tsx  TermDropdown.tsx
frontend/src/components/layout/: Header.tsx  ThemeToggle.tsx
frontend/src/components/schedule/: ScheduleCalendar.tsx  SelectedCoursesDrawer.tsx
frontend/src/components/ui/: Dropdown.tsx  Modal.tsx  Pagination.tsx  Spinner.tsx  TerrierIcon.tsx
frontend/src/contexts/: ScheduleContext.tsx
frontend/src/hooks/: useCourses.ts  useHubUnits.ts  useLocalSchedule.ts  useSchedule.ts  useSubjects.ts  useTerms.ts  useTheme.ts
frontend/src/lib/: departments.ts  schedule.ts  utils.ts
frontend/src/types/: index.ts
src/: __init__.py  config.py  data_loader.py  fetch_github_data.py  ics_export.py  main.py  models.py  refresh_rmp.py  rmp.py  schedule_builder.py  scrape_courses.py  search.py
src/data/: rmp_ratings.json
src/services/: enrichment.py
src/utils/: constants.py  departments.py  logger.py  parsing.py
tests/: conftest.py  test_api.py  test_ics_export.py  test_models.py  test_rmp.py  test_search.py
