[project]
name = "bu-course-search"
version = "0.1.0"
description = "Fast course search and schedule building for Boston University students"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alex"}
]
keywords = ["boston-university", "course-search", "schedule-builder", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.6.0",
    "pyroaring>=0.4.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# For scraping BU course data (HTML parsing)
scraper = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# All optional dependencies
all = [
    "bu-course-search[scraper,dev]",
]

[project.scripts]
bu-courses = "src.main:run"
bu-scrape = "src.scrape_courses:main"

[project.urls]
Homepage = "https://github.com/alexkm13/bu-course-search"
Repository = "https://github.com/alexkm13/bu-course-search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# RUFF - Fast Python linter & formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

# ============================================================================
# MYPY - Static type checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["rapidfuzz.*", "pyroaring.*", "bs4.*", "lxml.*"]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

# ============================================================================
# COVERAGE - Test coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true